--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-    font-family: 'fubutra';
+    font-family: "Bebas Neue", sans-serif;
 }
 
 
@@ -8,7 +8,6 @@
     margin-top: 20px;
 }
 
-/* Stats Section */
 #stats h3 {
     font-size: 65px;
     color: #00d779;
@@ -17,16 +16,16 @@
 }
 
 #stats p {
-    font-size: 30px;
+    font-size: 25px;
     color: #fff;
-    font-weight: 700;
+    font-weight: 500;
 }
 
-/* Features Section */
 #features .image-container {
     position: relative;
     width: 100%;
     overflow: hidden;
+    box-sizing: border-box;
 }
 
 #features .image-container img {
@@ -40,7 +39,6 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-   
     color: white;
     text-align: center;
     padding: 10px;
@@ -49,6 +47,7 @@
     justify-content: flex-end; 
     align-items: flex-start;
     height: 100%;
+    padding: 20px;
 }
 
 #features .overlay h5, #features .overlay p {
@@ -56,7 +55,6 @@
 }
 
 #features .overlay h5 {
-    font-family: 'fubutra';
     margin-top: 0.5rem;
     font-size: 25px;
     color: #00d779;
@@ -66,6 +64,7 @@
 #features .overlay p {
     font-size: 15px;
     font-weight: 400;
+    font-family: sans-serif;
 }
 
 
@@ -74,7 +73,10 @@
     position: absolute;
     left: 0;
     top: 0;
-    background: rgba(0, 0, 0, 0.5);
+    background: linear-gradient(180deg, transparent, 0, transparent 30%, #000);
+    /* background: rgba(0, 0, 0, 0.3); */
     width: 100%;
     height: 100%;
 }
+
+
